--- a/app/app.css
+++ b/app/app.css
@@ -141,7 +141,21 @@ body {
       opacity: 0.3;
     }
   }
-}
+  --animate-rippling:
+    rippling var(--duration) ease-out
+;
+  @keyframes rippling {
+  0% {
+    opacity:
+    1;
+    }
+  100% {
+    transform:
+    scale(2);
+    opacity:
+    0;
+    }
+  }}
 
 @layer base {
   * {
